fixed nav menu z-index

--- a/dmie/static/style.css
+++ b/dmie/static/style.css
@@ -67,7 +67,7 @@ a:visited {color: inherit;}
   background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
   overflow-x: hidden;
   transition: 0.3s;
-  z-index: 1;
+  z-index: 999;
   backdrop-filter: blur(5px); /* Apply a blur effect to the page content */
 }
 
